common-applications/test-environment/openeuler-login-feature/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-login-feature
  name: openeuler-login-feature
