common-applications/test-environment/openeuler-login-feature/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: openeuler-website-ingress
  namespace: openeuler-login-feature
spec:
  tls:
    - hosts:
        - openeuler-website.test.osinfra.cn
      secretName: openeuler-website-tls
  rules:
    - host: openeuler-website.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: website-service
              servicePort: 80
            path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: openeuler-website-docs-zh-ingress
  namespace: openeuler-login-feature
spec:
  tls:
    - hosts:
        - openeuler-doc-zh2.test.osinfra.cn
      secretName: openeuler-website-docs-zh-tls
  rules:
    - host: openeuler-doc-zh2.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: website-docs-zh-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: openeuler-website-docs-ru-ingress
  namespace: openeuler-login-feature
spec:
  tls:
    - hosts:
        - openeuler-doc-ru2.test.osinfra.cn
      secretName: openeuler-website-docs-ru-tls
  rules:
    - host: openeuler-doc-ru2.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: website-docs-ru-service
              servicePort: 80
            path: /
